--- a/WebApi/WebApi.csproj
+++ b/WebApi/WebApi.csproj
@@ -1,7 +1,8 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
     <TargetFramework>netcoreapp3.1</TargetFramework>
+    <UserSecretsId>78d3d551-fbb0-46d3-95b8-70e91c2c2b71</UserSecretsId>
   </PropertyGroup>
 
   <ItemGroup>
