--- a/WebApi/appsettings.json
+++ b/WebApi/appsettings.json
@@ -2,6 +2,12 @@
   "ConnectionStrings": {
     "DefaultConnection": "Data source=reactivities.db"
   },
+  "Cloudinary": {
+    "CloudName": "dn4accgfm",
+    "ApiSecret": "abEZCcrd-iOpnvFz_HKddK64BI4",
+    "ApiKey": "988494886125944"
+  },
+  "TokenKey": "super scret key",
   "Logging": {
     "LogLevel": {
       "Default": "Warning"
